2003-09-09  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * Fix a few delete/delete[] mismatch
2003-09-08  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * src/gdcmHeaderHelper.[h cxx]: added new class that provide an
      interpretation to data given by gdcmHeader. For instance there are
      heuristics to get informations (look at different places).
      * it also include a specific class: gdcmSerieHeaderHelper devoted to
      sorting DICOM images based on different strategies.
      * modified Makefiles accordingly.
2003-09-05  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * src/*.cxx : added pragma disable 4786/4251 to get rid of ~4300 warning
        when building in debug mode
      * vtk/win32/vtkgdcm.dsp : change /MT -> /MD and /MTd -> /MDd to match 
        src/win32/gdcmdll.dsp
      * vtk/win32/vtkgdcm.dsp : added /nodefaultlib "mscvrt" for debug mode
2003-08-29  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * Corrected a leak in vtkGdcmREader.cxx, the pSource was find thanks to valgrind.
2003-07-29  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * src/win32/libgdcmjpeg12.dsp was not dos format
      * src/win32/libgdcmjpeg12.dsp : libgdcmijpeg12_EXPORTS -> LIBGDCMIJPEG12_EXPORTS
      * src/win32/gdcmdll.dsp: + /I "..\jpeg\libijg12"
2003-07-29 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * src/gdcmHeader.h : add std:: prefix for stl elements... like others in
        the file
      * src/gdcmFile.cxx : bug fix in affectation type
      * src/jpeg/libijpeg12/jmorecfg12.h : export for windows modified... like
        in src/jpeg/libijpeg8/jmorecfg8.h (JPR : copy/paste exists !!!)
      * Modifs of MVSC projects to compile them. Not concerning 2 identic
        symbols... futur problem ?
2003-07-29  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * src/win32/libgdcmijpeg12.dsp was missing