@@ -1,3 +1,5 @@
+2003-09-10  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
+      * vtkGdcmReader set spacing and origin correctly
 2003-09-09  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
       * Fix a few delete/delete[] mismatch
 2003-09-08  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
